--- a/files/openshift-gitops-subscription.yaml
+++ b/files/openshift-gitops-subscription.yaml
@@ -1,11 +1,19 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: argocd-cluster-scope
+spec:
+  finalizers:
+  - kubernetes
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: openshift-gitops-operator
   namespace: openshift-operators
 spec:
-  channel: gitops-1.8 #If we need to install in OCP 4.10
-  installPlanApproval: Manual
+  channel: gitops-1.8
+  installPlanApproval: Automatic
   name: openshift-gitops-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
@@ -15,5 +23,7 @@ spec:
       value: "true"
     - name: ARGOCD_CLUSTER_CONFIG_NAMESPACES
       value: argocd-cluster-scope
+    - name: DISABLE_DEFAULT_ARGOCD_CONSOLELINK
+      value: 'true'
   ha:
     enabled: true
