--- a/files/gitops-group-users.yaml
+++ b/files/gitops-group-users.yaml
@@ -3,7 +3,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: group-a
-  label: argocd.argoproj.io/managed-by=gitops-group-a
+  label: 
+    argocd.argoproj.io/managed-by: gitops-group-a
 spec:
   finalizers:
   - kubernetes
