--- a/files/namespaces-for-workloads.yaml
+++ b/files/namespaces-for-workloads.yaml
@@ -1,4 +1,22 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: group-a
+  label: 
+    argocd.argoproj.io/managed-by: gitops-group-a
+spec:
+  finalizers:
+  - kubernetes
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gitops-group-a
+spec:
+  finalizers:
+  - kubernetes
+---
 kind: Group
 apiVersion: user.openshift.io/v1
 metadata:
@@ -33,6 +51,23 @@ roleRef:
   kind: ClusterRole
   name: admin
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: group-b
+  label: argocd.argoproj.io/managed-by=gitops-group-b
+spec:
+  finalizers:
+  - kubernetes
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: gitops-group-b
+spec:
+  finalizers:
+  - kubernetes
 ---
 kind: Group
 apiVersion: user.openshift.io/v1
