--- a/files/argocd-instance-namespace-scope.yaml
+++ b/files/argocd-instance-namespace-scope.yaml
@@ -117,7 +117,7 @@ spec:
   monitoring:
     enabled: false
   notifications:
-    enabled: false
+    enabled: true
   prometheus:
     enabled: false
     ingress:
