--- a/files/argocd-instance-namespace-scope.yaml
+++ b/files/argocd-instance-namespace-scope.yaml
@@ -18,7 +18,7 @@ spec:
       p, role:none, gpgkeys, get, *, deny
 
       # Admin privileges to admin user
-      g, kubeadmin, role:admin # CRC Admin user
+      g, kubeadmin, role:admin
       g, system:cluster-admins, role:admin
 
       #Privileges at project level
@@ -27,61 +27,6 @@ spec:
 
     scopes: '[groups,name]'
 
-  resourceHealthChecks:
-    - group: operators.coreos.com
-      kind: Subscription
-      check: |
-        health_status = {}
-        if obj.status ~= nil then
-          if obj.status.conditions ~= nil then
-            numDegraded = 0
-            numPending = 0
-            msg = ""
-            for i, condition in pairs(obj.status.conditions) do
-              msg = msg .. i .. ": " .. condition.type .. " | " .. condition.status .. "\n"
-              if condition.type == "InstallPlanPending" and condition.status == "True" then
-                numPending = numPending + 1
-              elseif (condition.type == "InstallPlanMissing" and condition.reason ~= "ReferencedInstallPlanNotFound") then
-                numDegraded = numDegraded + 1
-              elseif (condition.type == "CatalogSourcesUnhealthy" or condition.type == "InstallPlanFailed" or condition.type == "ResolutionFailed") and condition.status == "True" then
-                numDegraded = numDegraded + 1
-              end
-            end
-            if numDegraded == 0 and numPending == 0 then
-              health_status.status = "Healthy"
-              health_status.message = msg
-              return health_status
-            elseif numPending > 0 and numDegraded == 0 then
-              health_status.status = "Progressing"
-              health_status.message = "An install plan for a subscription is pending installation"
-              return health_status
-            else
-              health_status.status = "Degraded"
-              health_status.message = msg
-              return health_status
-            end
-          end
-        end
-        health_status.status = "Progressing"
-        health_status.message = "An install plan for a subscription is pending installation"
-        return health_status
-    - group: operators.coreos.com
-      kind: InstallPlan
-      check: |
-        hs = {}
-        if obj.status ~= nil then
-          if obj.status.phase ~= nil then
-            if obj.status.phase == "Complete" then
-              hs.status = "Healthy"
-              hs.message = obj.status.phase
-              return hs
-            end
-          end
-        end
-        hs.status = "Progressing"
-        hs.message = "Waiting for InstallPlan to complete"
-        return hs
-        
   server:
     route:
       enabled: true #creates an openshift route to access Argo CD UI
