--- a/files/app-of-apps/app-of-apps-group-a.yaml
+++ b/files/app-of-apps/app-of-apps-group-a.yaml
@@ -11,6 +11,7 @@ spec:
   source:
     repoURL: https://github.com/davidseve/argocd-multi-tenancy.git
     path: files/applications
+    targetRevision: argocdinstance
   syncPolicy:
     automated:
       prune: true
