--- a/files/argocd-projects.yaml
+++ b/files/argocd-projects.yaml
@@ -24,11 +24,11 @@ spec:
       policies:
         # all
         - >-
-          p, proj:group-a-p:admin, applicationsets, *, group-a-p/group-a*, allow
+          p, proj:group-a-p:admin, applicationsets, *, group-a-p/*, allow
         - >-
-          p, proj:group-a-p:admin, applications, *, group-a-p/group-a-ap*, allow
+          p, proj:group-a-p:admin, applications, *, group-a-p/*, allow
         - >-
-          p, proj:group-a-p:admin, repositories, *, group-a-p/group-a*, allow
+          p, proj:group-a-p:admin, repositories, *, group-a-p/*, allow
         - >-
           g, userC, proj:group-a-p:developers
     - description: Group to viewers
@@ -74,17 +74,17 @@ spec:
         - >-
           p, proj:group-a-p:developers, logs, get,
           group-a-p/*, allow   
-  # syncWindows:
-  # - kind: deny
-  #   schedule: '* * * * *'
-  #   duration: 24h 
-  #   manualSync: true
-  #   clusters:
-  #   - '*'
-  #   applications:
-  #   - '*'
-  #   namespaces:
-  #   - '*'
+  syncWindows:
+  - kind: deny
+    schedule: '* * * * *'
+    duration: 24h 
+    manualSync: true
+    clusters:
+    - '*'
+    applications:
+    - '*'
+    namespaces:
+    - '*'
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
