--- a/files/applications/application-example-wrong-project.yaml
+++ b/files/applications/application-example-wrong-project.yaml
@@ -3,9 +3,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: group-a-wrong-project
-  namespace: argocd-instance
+  namespace: group-a-na
 spec:
-  project: group-b
+  project: group-b-p
   source:
     helm:
       parameters:
