--- a/files/argocd-projects.yaml
+++ b/files/argocd-projects.yaml
@@ -3,15 +3,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: group-a-p
-  namespace: argocd-instance
+  namespace: argocd-cluster-scope
 spec:
   description: group-a 
   sourceRepos:
     - '*'
+  sourceNamespaces:
+    - group-a-na
   destinations:
     - namespace: group-a-na
-      server: https://kubernetes.default.svc 
-    - namespace: argocd-instance
       server: https://kubernetes.default.svc 
   clusterResourceWhitelist:
     - group: '*'
@@ -74,29 +74,31 @@ spec:
         - >-
           p, proj:group-a-p:developers, logs, get,
           group-a-p/*, allow   
-  syncWindows:
-  - kind: deny
-    schedule: '* * * * *'
-    duration: 24h 
-    manualSync: true
-    clusters:
-    - '*'
-    applications:
-    - '*'
-    namespaces:
-    - '*'
+  # syncWindows:
+  # - kind: deny
+  #   schedule: '* * * * *'
+  #   duration: 24h 
+  #   manualSync: true
+  #   clusters:
+  #   - '*'
+  #   applications:
+  #   - '*'
+  #   namespaces:
+  #   - '*'
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: group-b
-  namespace: argocd-instance
+  name: group-b-p
+  namespace: argocd-cluster-scope
 spec:
   description: group-b 
   sourceRepos:
     - '*'
+  sourceNamespaces:
+    - group-b-na
   destinations:
-    - namespace: group-b
+    - namespace: group-b-na
       server: https://kubernetes.default.svc 
   clusterResourceWhitelist:
     - group: '*'
