--- a/files/namespaces-for-workloads.yaml
+++ b/files/namespaces-for-workloads.yaml
@@ -2,29 +2,19 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: group-a
-  labels: 
-    argocd.argoproj.io/managed-by: argocd-instance
-spec:
-  finalizers:
-  - kubernetes
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: group-b
-  labels: 
-    argocd.argoproj.io/managed-by: argocd-instance
-spec:
-  finalizers:
-  - kubernetes
----
-apiVersion: v1
-kind: Namespace
-metadata:
   name: group-a-na
   labels: 
-    argocd.argoproj.io/managed-by: argocd-instance
+    argocd.argoproj.io/managed-by: argocd-cluster-scope
+spec:
+  finalizers:
+  - kubernetes
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: group-b-na
+  labels: 
+    argocd.argoproj.io/managed-by: argocd-cluster-scope
 spec:
   finalizers:
   - kubernetes
