--- a/files/openshift-gitops-subscription.yaml
+++ b/files/openshift-gitops-subscription.yaml
@@ -1,11 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: argocd-cluster-scope
-spec:
-  finalizers:
-  - kubernetes
----
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
@@ -25,7 +17,7 @@ spec:
       value: argocd-cluster-scope
     - name: DISABLE_DEFAULT_ARGOCD_CONSOLELINK
       value: 'true'
-    - name: CONTROLLER_CLUSTER_ROLE
-      value: argocd-application-controller-custom
+    # - name: CONTROLLER_CLUSTER_ROLE
+    #   value: argocd-application-controller-custom
   ha:
     enabled: true
