--- a/files/argocd-projects.yaml
+++ b/files/argocd-projects.yaml
@@ -74,17 +74,7 @@ spec:
         - >-
           p, proj:group-a-p:developers, logs, get,
           group-a-p/*, allow   
-  syncWindows:
-  - kind: deny
-    schedule: '* * * * *'
-    duration: 24h 
-    manualSync: true
-    clusters:
-    - '*'
-    applications:
-    - '*'
-    namespaces:
-    - '*'
+  #syncWindows:
   # - kind: deny
   #   schedule: '* * * * *'
   #   duration: 24h 
